--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tiptap/react": "^2.22.2",
     "@tiptap/starter-kit": "^2.22.2",
+    "lucide-react": "^0.522.0",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
